# fetch

./: README.md  pyproject.toml  setup.cfg
fetch/: fetch.py  scraper.py
