[metadata]
name = fetch-vincjess
version = 0.0.1
author = Jesse Vincent
author_email = vincenjes@gmail.com
description = A web scraping package that simplifies the modules of requests, selenium, and bs4.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WordCruncher/fetch
project_url =
	Bug Tracker = https://github.com/WordCruncher/fetch
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7